{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 24,
  "lineage": "d0dae614-45fd-2866-44ac-6a7b35fe44a3",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:181636875901:internet-gateway/igw-09ff55948e4b51cd4",
            "id": "igw-09ff55948e4b51cd4",
            "owner_id": "181636875901",
            "tags": {
              "Environment": "Production",
              "Name": "globo-primary",
              "Team": "Network"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "globo-primary",
              "Team": "Network"
            },
            "vpc_id": "vpc-03772a0e6bd7835d1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09ff55948e4b51cd4",
            "id": "r-rtb-02c4d3dcaaec477e51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02c4d3dcaaec477e5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:181636875901:route-table/rtb-0914ab278c002d159",
            "id": "rtb-0914ab278c002d159",
            "owner_id": "181636875901",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Production",
              "Name": "globo-primary-private-us-east-1a",
              "Team": "Network"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "globo-primary-private-us-east-1a",
              "Team": "Network"
            },
            "timeouts": null,
            "vpc_id": "vpc-03772a0e6bd7835d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:181636875901:route-table/rtb-0efe9aa18769f3345",
            "id": "rtb-0efe9aa18769f3345",
            "owner_id": "181636875901",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Production",
              "Name": "globo-primary-private-us-east-1b",
              "Team": "Network"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "globo-primary-private-us-east-1b",
              "Team": "Network"
            },
            "timeouts": null,
            "vpc_id": "vpc-03772a0e6bd7835d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:181636875901:route-table/rtb-03f48b40531aeb8c8",
            "id": "rtb-03f48b40531aeb8c8",
            "owner_id": "181636875901",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Production",
              "Name": "globo-primary-private-us-east-1c",
              "Team": "Network"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "globo-primary-private-us-east-1c",
              "Team": "Network"
            },
            "timeouts": null,
            "vpc_id": "vpc-03772a0e6bd7835d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:181636875901:route-table/rtb-02c4d3dcaaec477e5",
            "id": "rtb-02c4d3dcaaec477e5",
            "owner_id": "181636875901",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09ff55948e4b51cd4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Production",
              "Name": "globo-primary-public",
              "Team": "Network"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "globo-primary-public",
              "Team": "Network"
            },
            "timeouts": null,
            "vpc_id": "vpc-03772a0e6bd7835d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a264b18464180608",
            "route_table_id": "rtb-0914ab278c002d159",
            "subnet_id": "subnet-0f2d129130909458e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f28c8740c9dad32e",
            "route_table_id": "rtb-0efe9aa18769f3345",
            "subnet_id": "subnet-0263fab454b294e5a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01411dfb9a72f31ba",
            "route_table_id": "rtb-03f48b40531aeb8c8",
            "subnet_id": "subnet-05ff5d07bba3dc349"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd2d66505e720fe4",
            "route_table_id": "rtb-02c4d3dcaaec477e5",
            "subnet_id": "subnet-01f502fb31c514df0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c43961c45baaef47",
            "route_table_id": "rtb-02c4d3dcaaec477e5",
            "subnet_id": "subnet-0b6d1fd324d77b983"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bd0800b0fab9f28",
            "route_table_id": "rtb-02c4d3dcaaec477e5",
            "subnet_id": "subnet-0ba57854f05f10872"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:181636875901:subnet/subnet-0f2d129130909458e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2d129130909458e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "181636875901",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Name": "globo-primary-private-us-east-1a",
              "Team": "Network"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "globo-primary-private-us-east-1a",
              "Team": "Network"
            },
            "vpc_id": "vpc-03772a0e6bd7835d1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:181636875901:subnet/subnet-0263fab454b294e5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0263fab454b294e5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "181636875901",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Name": "globo-primary-private-us-east-1b",
              "Team": "Network"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "globo-primary-private-us-east-1b",
              "Team": "Network"
            },
            "vpc_id": "vpc-03772a0e6bd7835d1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:181636875901:subnet/subnet-05ff5d07bba3dc349",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ff5d07bba3dc349",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "181636875901",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Name": "globo-primary-private-us-east-1c",
              "Team": "Network"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "globo-primary-private-us-east-1c",
              "Team": "Network"
            },
            "vpc_id": "vpc-03772a0e6bd7835d1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:181636875901:subnet/subnet-01f502fb31c514df0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f502fb31c514df0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "181636875901",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Name": "globo-primary-public-us-east-1a",
              "Team": "Network"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "globo-primary-public-us-east-1a",
              "Team": "Network"
            },
            "vpc_id": "vpc-03772a0e6bd7835d1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:181636875901:subnet/subnet-0b6d1fd324d77b983",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6d1fd324d77b983",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "181636875901",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Name": "globo-primary-public-us-east-1b",
              "Team": "Network"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "globo-primary-public-us-east-1b",
              "Team": "Network"
            },
            "vpc_id": "vpc-03772a0e6bd7835d1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:181636875901:subnet/subnet-0ba57854f05f10872",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba57854f05f10872",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "181636875901",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Name": "globo-primary-public-us-east-1c",
              "Team": "Network"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "globo-primary-public-us-east-1c",
              "Team": "Network"
            },
            "vpc_id": "vpc-03772a0e6bd7835d1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:181636875901:vpc/vpc-03772a0e6bd7835d1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-068c7c36ca2bcc205",
            "default_route_table_id": "rtb-03d23cd6960d9f14e",
            "default_security_group_id": "sg-02063220d67ef7972",
            "dhcp_options_id": "dopt-08c04d0b26e677d44",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03772a0e6bd7835d1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03d23cd6960d9f14e",
            "owner_id": "181636875901",
            "tags": {
              "Environment": "Production",
              "Name": "globo-primary",
              "Team": "Network"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "globo-primary",
              "Team": "Network"
            }
          }
        }
      ]
    }
  ]
}